Edits of "Additional Information" section

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2340,8 +2340,71 @@ using the OWL 2 RDF-Based Semantics \cite{W3C:REC-owl2-rdf-based-semantics-20091
 This specification does not require or request any change to any other OMG specification. 
 
 \section{How to Read this Specification}
+The initial eight chapters of this specification are \emph{informative} providing  a high-level
+ summary of usage scenarios and goals (Chapter \ref{c:goal}) and an overview over the design of
+\DOL  (Chapter \ref{c:design}).
 
-\section{About this Specification}
+\medskip \noindent 
+Chapter \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) in Extended
+Backus–Naur Form (EBNF).  
+
+\medskip \noindent 
+Chapter \ref{a:text-syntax} provides a human friendly text serialization of the abstract syntax of 
+\DOL (\emph{normative}). 
+
+\medskip \noindent 
+Chapter \ref{c:semantics} defines the model-theoretic semantics of \DOL (\emph{normative}). 
+
+\medskip \noindent 
+Annex \ref{a:rdf-logic-vocab} specifies an RDF vocabulary for describing OMS languages that 
+conform with \DOL  (\emph{normative}). 
+
+\medskip \noindent 
+Annex \ref{a:owl} discusses the conformance of OWL2 with \DOL  (\emph{normative}). \ednote{Elaborate after the annex has been finished.}
+
+\medskip \noindent 
+Annex \ref{a:cl} discusses the conformance of OWL2 with \DOL  (\emph{normative}). \ednote{Elaborate  after the annex has been finished.}
+
+\medskip \noindent 
+Annex \ref{a:rdfs} discusses the conformance of RDF and RDFS with \DOL  (\emph{normative}). The
+ conformance is established by defining institutions for RDF and RDFS. 
+
+
+%\normannex{Conformance of UML class diagrams DOL}
+\medskip \noindent 
+Annex \ref{a:uml-class} discusses the conformance of UML class diagrams with \DOL 
+ (\emph{normative}).\ednote{Elaborate after the annex has been finished.}
+
+%\normannex{Conformance of CASL with DOL}
+
+\medskip \noindent 
+Annex \ref{a:casl} discusses the conformance of CASL with \DOL  (\emph{normative}).\ednote{Review
+ this after the annex has been finished.}
+
+%\normannex{A Core Logic Graph}
+
+\medskip \noindent 
+Annex \ref{a:graph}  provides a core graph of logics and translations, covering those OMS languages
+whose conformance with DOL is established in the preceding, normative annexes (\emph{normative}). 
+
+\medskip \noindent 
+Annex 
+(\emph{informative}).
+
+\medskip \noindent 
+Annex 
+(\emph{informative}).
+
+\medskip \noindent 
+Annex 
+(\emph{informative}).
+
+\medskip \noindent 
+Annex 
+(\emph{informative}).
+
+
+%\section{About this Specification}
 
 \section{Acknowledgments}
 \subsection{Submitting and supporting organizations}
@@ -2442,7 +2505,7 @@ The following people contributed directly to the development of this specificati
 %%%%%%%%%%%%%%%% 
 %%%%%%%%%%%%%%%% 
 
-\chapter{Goals and Usage Scenarios}
+\chapter{Goals and Usage Scenarios} \label{c:goal}
 
 There are many domains in which multiple OMS are needed, in some cases axiomatized in the same 
 language, and in other cases axiomatized in different logical languages. This leads to several 
@@ -2738,7 +2801,7 @@ specification, and model-driven development. It provides the ability to specify 
 allow  a better exchange and reuse of OMS. Eventually, this will also lead to better, easier developed and maintained systems based on these OMS.
 
 
-\chapter{Design Overview}
+\chapter{Design Overview} \label{c:design}
 %
 %\ednote{replace this section by saying how we respond to the RFP}
 %
@@ -5379,9 +5442,13 @@ pos=h,
 
 \normannex{Conformance of OWL 2 with DOL}\label{a:owl}
 
-The semantic conformance of OWL 2 (as specified in \nisref{W3C/TR REC-owl2-syntax:2009}) with DOL is established in \cite{OntoGraph}.
+The semantic conformance of OWL 2 (as specified in \nisref{W3C/TR REC-owl2-syntax:2009}) with DOL
+is established in \cite{OntoGraph}.
 
-The OWL/XML serialization satisfies the criteria for XML conformance.  The mapping of OWL 2 to RDF graphs satisfies the criteria for RDF conformance\CLnote{This is not exactly true, as some things, e.g. imports, can't be identified.}.  The OWL 2 Manchester syntax satisfies the criteria for text conformance.
+The OWL/XML serialization satisfies the criteria for XML conformance.  The mapping of OWL 2 to RDF
+graphs satisfies the criteria for RDF conformance\CLnote{This is not exactly true, as some things,
+e.g. imports, cannot be identified.}.  The OWL 2 Manchester syntax satisfies the criteria for text
+ conformance.
 ~\CLnote{also need conformance propositional logic; use PL ``profile'' of the CASL ``IFIP standard''}
 
 OWL can be formalized as an institute as follows:
@@ -5393,8 +5460,7 @@ Signatures of the description logic $\ALC$ consist of a set  ${\mathcal A}$ of
 atomic concepts, a set ${\mathcal R}$ of roles and a set ${\mathcal
 I}$ of individual constants. The partial order on signatures is defined
 as component wise inclusion.
-  Models are 
- first-order structures $I = (\Delta^I, .^I)$ with universe $\Delta^I$
+Models are  first-order structures $I = (\Delta^I, .^I)$ with universe $\Delta^I$
 that interpret concepts as unary and roles as binary predicates
 (using $.^I$). $I_1\leq I_2$ if $\Delta^{I_1}=\Delta^{I_2}$ and all
 concepts and roles of $I_1$ are subconcepts and subroles of those in $I_2$.
@@ -5410,8 +5476,8 @@ for $a,b\in{\mathcal I}, R\in{\mathcal R}$).   Satisfaction is the
 standard satisfaction of description logics.
 
 The logic \SROIQ \cite{SROIQ}, which is the logical core of the Web Ontology
-Language \OWL 2 DL\footnote{See also \url{http://www.w3.org/TR/owl2-overview/}}, extends $\ALC$ with the following
-constructs: (i) complex role inclusions such as $R \circ S \sqsubseteq S$
+Language \OWL 2 DL\footnote{See also \url{http://www.w3.org/TR/owl2-overview/}}, extends $\ALC$
+with the following constructs: (i) complex role inclusions such as $R \circ S \sqsubseteq S$
 as well as simple role hierarchies such as $R \sqsubseteq S$,
 assertions for symmetric, transitive, reflexive, asymmetric and
 disjoint roles (called RBox sentences, denoted by $\mathcal{SR}$), as well as the construct
