--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2369,39 +2369,48 @@ Annex \ref{a:cl} discusses the conformance of OWL2 with \DOL  (\emph{normative})
 Annex \ref{a:rdfs} discusses the conformance of RDF and RDFS with \DOL  (\emph{normative}). The
  conformance is established by defining institutions for RDF and RDFS. 
 
-
-%\normannex{Conformance of UML class diagrams DOL}
 \medskip \noindent 
 Annex \ref{a:uml-class} discusses the conformance of UML class diagrams with \DOL 
  (\emph{normative}).\ednote{Elaborate after the annex has been finished.}
 
-%\normannex{Conformance of CASL with DOL}
-
 \medskip \noindent 
 Annex \ref{a:casl} discusses the conformance of CASL with \DOL  (\emph{normative}).\ednote{Review
  this after the annex has been finished.}
-
-%\normannex{A Core Logic Graph}
 
 \medskip \noindent 
 Annex \ref{a:graph}  provides a core graph of logics and translations, covering those OMS languages
 whose conformance with DOL is established in the preceding, normative annexes (\emph{normative}). 
 
 \medskip \noindent 
-Annex 
+Annex \ref{a:ext-graph} extends the graph presented in Annex \ref{a:graph}  by a list of OMS
+language whose conformance with DOL will be established by a registry.
 (\emph{informative}).
 
 \medskip \noindent 
-Annex 
+Annex \ref{a:uses} provides of \DOL texts, which provide examples for all \DOL constructs, which 
+are specified in the abstract syntax. 
 (\emph{informative}).
 
 \medskip \noindent 
-Annex 
+Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied. For 
+each scenario, we list its status of implementation, the \DOL features it makes use of, and 
+provide a brief description.
 (\emph{informative}).
 
 \medskip \noindent 
-Annex 
+Annex \ref{a:meta-vocab} 
+(\emph{informative}).\ednote{FN: reevaluate after discussion with Till}
+
+\medskip \noindent 
+Annex \ref{a:MOF} contains the abstract syntax specified as an SMOF compliant meta model.
 (\emph{informative}).
+
+
+\medskip \noindent 
+The bibliography contains \ref{a:bibliography} references to the literature that is cited in this document.
+(\emph{informative}).
+
+
 
 
 %\section{About this Specification}
@@ -5820,12 +5829,12 @@ mentioned in \aref{a:graph}):
 \item ORM (object role modeling)
 \item the meta model of schema.org
 \item UML (Unified Modeling Language), with possibly different logics according to different
-UML semantics
+UML semantics\ednote{This should probably distinguish between class diagrams and others, since UML class diagrams are already covered in another annex.}
 \item SKOS (Simple Knowledge Organization System )
 \item FOL\textsuperscript{=} (untyped first-order logic, as used for the
 TPTP format)
 \item F-logic
-\item CASL (Common Algebraic Specification Language)
+%\item CASL (Common Algebraic Specification Language)
 \end{itemize}
 
 The actual translations are specified in \cite{OntoGraph}.
@@ -5834,7 +5843,7 @@ The actual translations are specified in \cite{OntoGraph}.
 
 
 
-\infannex{Example Uses of all DOL Constructs}
+\infannex{Example Uses of all DOL Constructs}\label{a:uses}
 
 \ednote{the uses cases in the RFP should be reused and worked into DOL examples}
 
@@ -6181,7 +6190,7 @@ end
 
 \end{lstlisting}
 
-\infannex{Use cases}
+\infannex{Use cases}\label{a:use-cases}
 
 This annex sketches scenarios that outline how DOL is intended to be applied.  For each scenario, we list its status of implementation, the DOL features it makes use of, and provide a brief description.
 
@@ -6310,14 +6319,20 @@ pos=h,
 
 ~\todonote[author=Christoph Lange,date=D:201107131255+02'00',type=todo]{maybe mention: How do we use the ISO 12620 DCR for our extension of the OMV?}
 
+\infannex{Abstract syntax specified as an SMOF meta model}\label{a:MOF}
+<The SMOF meta model is in preparation.>
 
+
+
+
+
+
+%\infannex{Bibliography}
 \clearpage
-
-
-\infannex{Bibliography}
-
-
+\addcontentsline{toc}{chapter}{References}
 \bibliographystyle{plain} 
+\renewcommand{\bibname}{References}
+\label{a:bibliography}
 \bibliography{dol}
 
 \end{document}
