section 7 introduction rewritten.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2516,8 +2516,10 @@ The following people contributed directly to the development of this specificati
 
 \chapter{Goals and Usage Scenarios} \label{c:goal}
 
-There are many domains in which multiple OMS are needed, in some cases axiomatized in the same 
-language, and in other cases axiomatized in different logical languages. This leads to several 
+
+There are many domains and applications which involve knowledge that is represented in different OMS. These OMS often represent the domain from different perspectives or for different purposes. Further, the OMS are often represented in different OMS languages (e.g., UML, OWL, or Common Logic), which have different computational properties. 
+
+This heterogeneity leads to  several 
 challenges in the design and deployment of OMS, which have been addressed by current research in 
 ontological engineering, formal software specification and formal modeling:
 \begin{itemize}
@@ -2528,11 +2530,15 @@ in which the OMS are axiomatized in different logical languages?
 \item What are the relationships between versions of an OMS axiomatized in different logical languages?
 \end{itemize}
 
+
 To illustrate these challenges, in this section we present a set of use cases which highlight different aspects of a theme common to ontology design, formal specification, and model-driven development: 
- the use of heterogeneous formal representations leads to interoperability challenges. There 
-are ad-hoc solutions to these challenges, and specialized languages and tools are used in practice. 
-However, absent an approach like DOL, there is no standardized approach or representation metalanguage to enable more accurate 
-and consistent alignment, integration, and mapping among these specifications and the tools that
+ the use of heterogeneous formal representations leads to interoperability challenges. 
+ %There  are ad-hoc solutions to these challenges, and specialized languages and tools are used in practice. 
+
+
+The goal of \DOL is to address these challenges scenarios by providing  a
+standardized representation languages, which allows to formally represent structured OMS and the relations between OMS as part of OMS networks. \DOL will allow to overcome the interoperability challenges that are described in the user scenarios by enabling more accurate 
+and consistent alignment, integration, and mapping among OMS and by supporting tools that
 implement them.
 
 
