more changes to clause 7 introduction

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2531,15 +2531,15 @@ in which the OMS are axiomatized in different logical languages?
 \end{itemize}
 
 
-To illustrate these challenges, in this section we present a set of use cases which highlight different aspects of a theme common to ontology design, formal specification, and model-driven development: 
+To illustrate these challenges, in this clause we present a set of usage scenarios that involve the representation of knowledge in more than one OMS. These scenarios are in the areas of ontology design, formal specification, and model-driven development. In spite of their many differences, they  all highlight one common theme:  
  the use of heterogeneous formal representations leads to interoperability challenges. 
  %There  are ad-hoc solutions to these challenges, and specialized languages and tools are used in practice. 
 
 
-The goal of \DOL is to address these challenges scenarios by providing  a
-standardized representation languages, which allows to formally represent structured OMS and the relations between OMS as part of OMS networks. \DOL will allow to overcome the interoperability challenges that are described in the user scenarios by enabling more accurate 
-and consistent alignment, integration, and mapping among OMS and by supporting tools that
-implement them.
+The purpose of \DOL is to provide  a
+standardized representation language, which allows to represent structured OMS and the relations 
+between OMS as part of OMS networks in a semantically well-defined way. Thus, tools that implement \DOL are able to integrate different OMS into a coherent whole.  This enables users of \DOL to overcome the different kind of interoperability issues that illustrated by the usage scenarios in this clause.  
+
 
 
 
