introductory discussion of semantics

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -987,8 +987,8 @@ and comments in existing language serializations, see \ref{sec:existing-serializ
 %
 6.7.(b)	& 
 Proposals should discuss whether the semantics of the metalanguage shall be included into the standard.	&
-We have included the semantics into the standard, since it
-helps to address some of the mandatory requirements.\ednote{move this to the standard proper}
+We have included the semantics into the standard. The reasons are discussed
+in the introduction of clause \ref{c:semantics}.
    \\ \hline
 %	
 6.7.(c)	& 
@@ -4100,6 +4100,16 @@ language can be used as-is in DOL, by reference to its IRI.
 %translation. This is of particular importance when studying model-theoretic
 %properties like finite model or tree model properties.
 
+DOL is a logical language with a precise formal semantics.  The
+semantics gives DOL a rock-solid foundation, and provides increased
+trustworthiness in applications based on OMS written in DOL.  The
+semantics of DOL is moreover the basis for formal interoperability, as
+well as for the meaningful use of logic-based tools for DOL, such as
+theorem provers, model-checkers, SMT solvers etc. These reasons, plus
+the requirement in the OntoIOp RFP, have lead us to include the
+semantics in the standard document proper, even though the semantics
+is quite technical and therefore has a more limited readership than
+the other the chapters of this standard.
 
 \todonote{intro to semantics, informal overview}
 
