discussion of chosen languages and translations

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -993,11 +993,8 @@ in the introduction of clause \ref{c:semantics}.
 %	
 6.7.(c)	& 
 Proposals should discuss the chosen list of logics and translations.	&
-The list of chosen logics includes the mandatory ones (which
-are ontology and modeling languagegs),
-plus CASL as a specification language.
-The list of translations comprises those which are obivous and
-useful.\ednote{move this to the standard proper}
+The chosen list of logics and translations is discussed in the
+introduction of annex \ref{a:graph}.
    \\ \hline
 %	
 6.7.(d)	& 
@@ -5789,6 +5786,13 @@ The translations are specified in \cite{OntoGraph}.
 
 ~\todonote[author=Christoph Lange,type=fyi]{We need this in order to be able to say something about default translations, and about establishing conformance by translation to a language that already conforms.}
 
+The list of chosen logics includes those ones required as mandatory
+ones in the RFP. Since these are only ontology and modeling
+languagegs, also a specification language is included, namely the
+Common Algebraic Specification Language (CASL).  The list of
+translations comprises standard translations from the literature,
+as well as furhter translations that are considered useful for
+logical interoperability.
 
 
 \sclause{\EL $\to$ $\OWL$ and $\ELDL++$ $\to$ $\SROIQ(D)$}
