--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -875,7 +875,7 @@ of the logical languages. Between a given pair of logical languages, several tra
 possible.	&
 The semantics of DOL is based on a heterogeneous logical
 environment, which contains institution comorphisms as translations, see \ref{c:direct-sematics}. Institution comorphisms preserve semantics
-in a weak form through their satisfaction condition. The LoLa ontology specifies properties of translations (comorphisms) preserving more and more of the semantics, see \url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/dol-rdf.omn}.\ednote{Should LoLa be mentioned more prominently in this standard?}
+in a weak form through their satisfaction condition. The LoLa ontology specifies properties of translations (comorphisms) preserving more and more of the semantics, see \url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/dol-rdf.omn}.
    \\ \hline
 %
 6.5.5(a)& 
@@ -999,7 +999,7 @@ introduction of annex \ref{a:graph}.
 %	
 6.7.(d)	& 
 Proposals should discuss a meta-ontology of logical languages and theories.	&
-We have developed the LoLa ontology, see \url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/dol-rdf.omn}.\ednote{move this to the standard proper}
+The LoLa ontology is discussed in annex \ref{a:rdf-logic-vocab}.
    \\ \hline
 %	
 6.7.(e)	& 
@@ -5566,6 +5566,11 @@ pos=h,
   serializes & Serialization & OMSLanguage
   \PropertyDocumentation{The subject logic is used to specify the semantics of the object OMS language; inverse of supportsSerialization.}\LL
 }
+
+The vocabulary described above has been integrated into the LoLa
+ontology, see
+\url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/dol-rdf.omn}.\ednote{cite paper}
+
 
 \normannex{Conformance of OWL 2 with DOL}\label{a:owl}
 
