--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -875,7 +875,7 @@ of the logical languages. Between a given pair of logical languages, several tra
 possible.	&
 The semantics of DOL is based on a heterogeneous logical
 environment, which contains institution comorphisms as translations, see \ref{c:direct-sematics}. Institution comorphisms preserve semantics
-in a weak form through their satisfaction condition. The LoLa ontology specifies properties of translations (comorphisms) preserving more and more of the semantics, see \url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/dol-rdf.omn}.
+in a weak form through their satisfaction condition. The LoLa ontology specifies properties of translations (comorphisms) preserving more and more of the semantics, see annex \ref{a:rdf-logic-vocab}.
    \\ \hline
 %
 6.5.5(a)& 
@@ -5569,8 +5569,9 @@ pos=h,
 
 The vocabulary described above has been integrated into the LoLa
 ontology, see
-\url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/dol-rdf.omn}.\ednote{cite paper}
-
+\url{https://github.com/ontohub/OOR_Ontohub_API/blob/master/lola/ontology/dol-rdf.omn}.\ednote{cite
+  paper} LoLa also comprises properties of translations preserving
+more and more of the semantics.
 
 \normannex{Conformance of OWL 2 with DOL}\label{a:owl}
 
