discussion of registry

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1019,7 +1019,7 @@ TODO: Ontohub, Hets
 %	
 6.7.(h)	& 
 Proposals should discuss a registry of logical languages.	&
-TODO: Ontohub
+A registry is discussed in clause \ref{c:conformance}.
    \\ \hline
 %	
 \end{longtable}
@@ -1191,7 +1191,7 @@ Specification Language (DOL) by defining an abstract syntax and an associated mo
 semantics for DOL. 
 
 
-\chapter{Conformance}
+\chapter{Conformance}\label{c:conformance}
 
 This clause defines conformance criteria for languages and logics that can be used with the
 distributed ontology, modeling and specification language DOL, as well as conformance criteria for
